--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<p>If you’ve ever looked at a “perfect” routine and thought, “yeah, that’s not happening,” you’re in the right place. Most of what I share starts as a Pinterest pin – then becomes a deeper blog-style guide you can actually use. Start by exploring <a href="#work">ADHD routines</a> or <a href="#about">Nala in Nature</a>, then save the ones that feel doable on your lowest-energy days.</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Work (reused as Low-Energy ADHD Girl)-->
 							<article id="work">
 								<h2 class="major">ADHD-Friendly Systems</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
@@ -64,6 +64,11 @@
 									<li>Simple systems for planning your day when executive function is on 10% battery.</li>
 								</ul>
 								<p>Browse my latest routines on Pinterest (search for <strong>@thelowenergyadhdgirl</strong>) or check back here as I slowly turn each pin into a cozy, detailed guide.</p>
+								<ul class="actions">
+    								<li><a href="https://pin.it/7dNC7yFxO" target="_blank" class="button primary">
+        								ADHD Pinterest Board
+								    </a></li>
+								</ul>
 							</article>
 
 						<!-- About (reused as Nala in Nature hub)-->
@@ -78,6 +83,11 @@
 									<li>Dog-friendly hike packing checklists that keep things simple and lightweight.</li>
 								</ul>
 								<p>If you’ve seen one of my pins about nature walks for anxious pups or dog-friendly hikes, this is where the deep-dive versions will live.</p> <!-- UPDATED -->
+								<ul class="actions">
+								    <li><a href="https://pin.it/5tpxZHztf" target="_blank" class="button primary">
+								        Dog Pinterest Board
+								    </a></li>
+								</ul>
 							</article>
 
 						<!-- Contact -->
@@ -374,6 +384,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
