--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<p>Browse my latest routines on Pinterest (search for <strong>@thelowenergyadhdgirl</strong>) or check back here as I slowly turn each pin into a cozy, detailed guide.</p>
 								<ul class="actions">
     								<li><a href="https://pin.it/7dNC7yFxO" target="_blank" class="button primary">
-        								ADHD Pinterest Board
+        								The Low-Energy ADHD Girl
 								    </a></li>
 								</ul>
 							</article>
@@ -83,11 +83,11 @@
 									<li>Dog-friendly hike packing checklists that keep things simple and lightweight.</li>
 								</ul>
 								<p>If you’ve seen one of my pins about nature walks for anxious pups or dog-friendly hikes, this is where the deep-dive versions will live.</p> <!-- UPDATED -->
-								<ul class="actions">
-								    <li><a href="https://pin.it/5tpxZHztf" target="_blank" class="button primary">
-								        Dog Pinterest Board
-								    </a></li>
-								</ul>
+								<p>
+								    <a href="https://pin.it/5tpxZHztf" target="_blank" class="icon brands fa-pinterest">
+								        <span class="label">Nala in Nature)</span>
+								    </a>
+								</p>
 							</article>
 
 						<!-- Contact -->
@@ -384,6 +384,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
