--- a/index.html
+++ b/index.html
@@ -478,82 +478,94 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	
 	<!-- Blog Logic -->
 	<script>
-	  (function () {
+	  document.addEventListener("DOMContentLoaded", function () {
 	    const blogList    = document.getElementById("blog-list");
 	    const postTitle   = document.getElementById("post-title");
 	    const postCover   = document.getElementById("post-cover");
 	    const postContent = document.getElementById("post-content");
 	
-	    // Try to read posts from different global locations
-	    const postsData =
-	      (typeof window.posts !== "undefined")
-	        ? window.posts
-	        : (typeof posts !== "undefined" ? posts : []);
-	
-	    console.log("postsData =", postsData);
-	
-	    if (!blogList || !Array.isArray(postsData) || postsData.length === 0) {
-	      console.error("Blog init failed: blogList missing or postsData is empty.");
+	    // 👇 Use the posts from posts.js directly
+	    let postsData;
+	    try {
+	      postsData = posts; // from posts.js
+	    } catch (e) {
+	      console.error("posts is not defined. Is posts.js loading correctly?", e);
 	      return;
 	    }
 	
-	    // Render the posts as thumbnail cards that match your CSS (.blog-card)
+	    console.log("postsData length =", postsData.length);
+	    console.log("postsData =", postsData);
+	
+	    if (!blogList) {
+	      console.error("Blog init failed: #blog-list not found.");
+	      return;
+	    }
+	
+	    if (!Array.isArray(postsData) || postsData.length === 0) {
+	      blogList.innerHTML = "<p>Blog posts coming soon.</p>";
+	      console.warn("No posts to render.");
+	      return;
+	    }
+	
+	    // 🔹 Build one card per post
 	    function renderBlogList() {
 	      blogList.innerHTML = "";
 	
 	      postsData.forEach((post, index) => {
-	        const card = document.createElement("article");
-	        card.className = "blog-card";
+	        const article = document.createElement("article");
+	        article.className = "blog-card";
 	
-	        card.innerHTML = `
+	        const imgSrc = post.cover || "images/pic01.jpg";
+	        const title  = post.title || "Untitled Post";
+	        const date   = post.date || "";
+	
+	        article.innerHTML = `
 	          <button type="button" class="blog-card-inner" data-id="${post.id}">
 	            <div class="blog-card-cover">
-	              <img src="${post.cover}" alt="${post.title}">
+	              <img src="${imgSrc}" alt="${title.replace(/"/g, "&quot;")}">
 	            </div>
 	            <div class="blog-card-footer">
 	              <span class="blog-card-step">${index + 1}</span>
-	              <h3 class="blog-card-title">${post.title}</h3>
-	              ${post.date ? `<p class="blog-card-date">${post.date}</p>` : ""}
+	              <h3 class="blog-card-title">${title}</h3>
+	              ${date ? `<p class="blog-card-date">${date}</p>` : ""}
 	            </div>
 	          </button>
 	        `;
 	
-	        blogList.appendChild(card);
+	        blogList.appendChild(article);
 	      });
+	
+	      console.log("Rendered blog cards:", blogList.children.length);
 	    }
 	
-	    // Click handling for any card
+	    // 🔹 Click → open full post view
 	    blogList.addEventListener("click", function (e) {
-	      const button = e.target.closest(".blog-card-inner");
-	      if (!button) return;
+	      const btn = e.target.closest(".blog-card-inner");
+	      if (!btn) return;
 	
-	      const id = Number(button.dataset.id);
-	      viewPost(id);
-	    });
-	
-	    // Show a single post – let Dimension handle the article switching
-	    window.viewPost = function (id) {
+	      const id = Number(btn.dataset.id);
 	      const post = postsData.find(p => p.id === id);
+	
 	      if (!post) {
 	        console.error("Post not found for id:", id);
 	        return;
 	      }
 	
-	      postTitle.textContent = post.title;
-	      postCover.src         = post.cover;
-	      postCover.alt         = post.title;
-	      postContent.innerHTML = post.content;
+	      postTitle.textContent = post.title || "";
+	      postCover.src         = post.cover || "";
+	      postCover.alt         = post.title || "";
+	      postContent.innerHTML = post.content || "";
 	
-	      // Open the post-viewer article
 	      location.hash = "#post-viewer";
-	    };
+	    });
 	
 	    // Initial render
 	    renderBlogList();
-	  })();
+	  });
 	</script>
 	</body>
 </html>
+
 
 
 
