--- a/index.html
+++ b/index.html
@@ -525,18 +525,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	          const title  = post.title || "Untitled Post";
 	          const date   = post.date || "";
 	
-	          article.innerHTML = `
-	            <button type="button" class="blog-card-inner" data-id="${post.id}">
-	              <div class="blog-card-cover">
-	                <img src="${imgSrc}" alt="${title.replace(/"/g, "&quot;")}">
-	              </div>
-	              <div class="blog-card-footer">
-	                <span class="blog-card-step">${index + 1}</span>
-	                <h3 class="blog-card-title">${title}</h3>
-	                ${date ? `<p class="blog-card-date">${date}</p>` : ""}
-	              </div>
-	            </button>
-	          `;
+				article.innerHTML = `
+				  <button data-id="${post.id}" style="width:100%;padding:1rem;border:1px solid #fff;">
+					<h3>${title}</h3>
+					<p>${date}</p>
+				  </button>
+				`;
 	
 	          blogList.appendChild(article);
 	        });
@@ -580,6 +574,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</script>
 	</body>
 </html>
+
 
 
 
