--- a/index.html
+++ b/index.html
@@ -471,151 +471,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	
-	<!-- Posts data (same folder as index.html) -->
-	<script src="/site/posts.js"></script>
-	
-	<script>
-	  (function () {
-	    function initBlog() {
-	      const blogList    = document.getElementById("blog-list");
-	      const postTitle   = document.getElementById("post-title");
-	      const postCover   = document.getElementById("post-cover");
-	      const postContent = document.getElementById("post-content");
-	
-	      if (!blogList) {
-	        console.error("[Blog] #blog-list not found.");
-	        return;
-	      }
-	
-	      // Pull posts from posts.js
-	      let postsData = window.posts || [];
-	
-	      // Sort newest first (based on your MM/DD/YYYY dates)
-	      postsData = postsData.slice().sort((a, b) => {
-	        const da = new Date(a.date);
-	        const db = new Date(b.date);
-	        if (!isNaN(da) && !isNaN(db)) return db - da;
-	        return b.id - a.id;
-	      });
-	
-	      console.log("[Blog] postsData =", postsData);
-	
-	      if (!Array.isArray(postsData) || postsData.length === 0) {
-	        blogList.innerHTML = "<p>Blog posts coming soon.</p>";
-	        console.warn("[Blog] No posts to render.");
-	        return;
-	      }
-	
-	      // Helper: show a single post in the viewer + update URL
-	      function showPost(post) {
-	        if (!postTitle || !postCover || !postContent) {
-	          console.error("[Blog] Post viewer elements missing.");
-	          return;
-	        }
-	
-	        postTitle.textContent = post.title || "";
-	        postCover.src         = post.cover || "";
-	        postCover.alt         = post.title || "";
-	        postContent.innerHTML = post.content || "";
-	
-	        // Update URL with ?post=ID (no reload)
-	        const url = new URL(window.location.href);
-	        url.searchParams.set("post", post.id);
-	        history.replaceState(null, "", url.toString());
-	
-	        // Open the post-viewer panel in Dimension
-	        window.location.hash = "#post-viewer";
-	      }
-	
-	      // Render blog list (cards/buttons)
-	      function renderBlogList() {
-	        blogList.innerHTML = "";
-	
-	        postsData.forEach((post) => {
-	          const item = document.createElement("div");
-	          item.className = "blog-item";
-	
-	          const title = post.title || "Untitled Post";
-	          const date  = post.date  || "";
-	          const cover = post.cover || "";
-	
-	          item.innerHTML = `
-	            <button type="button" class="blog-item-btn" data-id="${post.id}">
-	              ${cover ? `<img src="${cover}" alt="${title} cover" class="blog-thumb">` : ""}
-	              <div class="blog-item-text">
-	                <strong class="blog-item-title">${title}</strong>
-	                ${date ? `<div class="blog-item-date">${date}</div>` : ""}
-	              </div>
-	            </button>
-	          `;
-	
-	          blogList.appendChild(item);
-	        });
-	
-	        console.log("[Blog] Rendered items:", postsData.length);
-	      }
-	
-	      // Click → open post + update ?post=ID in URL
-	      blogList.addEventListener("click", function (e) {
-	        const btn = e.target.closest("button[data-id]");
-	        if (!btn) return;
-	
-	        const id   = Number(btn.dataset.id);
-	        const post = postsData.find((p) => p.id === id);
-	
-	        if (!post) {
-	          console.error("[Blog] Post not found for id:", id);
-	          return;
-	        }
-	
-	        showPost(post);
-	      });
-	
-	      // If URL already has ?post=ID, auto-open that post on load
-	      function openPostFromUrlIfNeeded() {
-	        const params = new URLSearchParams(window.location.search);
-	        const postParam = params.get("post");
-	        if (!postParam) return;
-	
-	        const id = Number(postParam);
-	        const post = postsData.find((p) => p.id === id);
-	        if (!post) {
-	          console.warn("[Blog] No post matched ?post=", postParam);
-	          return;
-	        }
-	
-	        showPost(post);
-	      }
-	
-	      // Optional: when clicking "Back to Blog", remove ?post from URL
-	      const backLink = document.querySelector("#post-viewer a.button");
-	      if (backLink) {
-	        backLink.addEventListener("click", function () {
-	          const url = new URL(window.location.href);
-	          url.searchParams.delete("post");
-	          history.replaceState(null, "", url.toString());
-	          // Hash change to #blog already handled by href="#blog"
-	        });
-	      }
-	
-	      renderBlogList();
-	      openPostFromUrlIfNeeded();
-	    }
-	
-	    if (document.readyState === "loading") {
-	      document.addEventListener("DOMContentLoaded", initBlog);
-	    } else {
-	      initBlog();
-	    }
-	  })();
-	</script>
-	<script src="js/main.js"></script>         <!-- your existing blog logic -->
-	<script src="js/posts-index.js"></script>   <!-- list of post JS files -->
-	<script src="js/posts-loader.js"></script>  <!-- loads them + calls renderPostList -->
+	<script src="assets/js/main.js"></script>  <!-- THE THEME'S main.js, keep this -->
+
+	<!-- Blog posts system -->
+	<script src="js/posts-index.js"></script>
+	<script src="js/posts-loader.js"></script>	
 	</body>
 </html>
+
 
 
 
